--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ include:
 
 variables:
   GIT_REPOSITORY: https://github.com/paritytech/polkadot
-  TAG: v0.9.39-1
+  TAG: v0.9.40
   PROG_NAME: polkadot
 
 app-build:
